Added msg style to style.css

--- a/MovieRatingApp/style.css
+++ b/MovieRatingApp/style.css
@@ -114,6 +114,10 @@
   .msg {
     text-align: center;
   }
+.msg-new{
+display: flex;
+}
+
   @media screen and (max-width: 600px) {
     .container {
       font-size: 14px;
